--- a/configs/models/mt3.pro.yaml
+++ b/configs/models/mt3.pro.yaml
@@ -6,12 +6,12 @@ arch:
         n_heads: 8
         n_layers: 6
         dim_feedforward: 2048
-        dropout: 0.1
+        dropout: 0
     decoder:
         n_heads: 8
         n_layers: 6
         dim_feedforward: 2048
-        dropout: 0.1
+        dropout: 0
     d_prediction_hidden: 128
     n_prediction_layers: 3
     with_state_refine: True
@@ -19,7 +19,7 @@ arch:
 
 loss:
     type: 'detr'
-    cutoff_distance: 2.5
+    cutoff_distance: 2500
     order: 1
     alpha: 2
     c_loss_multiplier: 4
@@ -28,12 +28,12 @@ loss:
     false_classifier: False
 
 training:
-    n_gradient_steps: 400000
+    n_gradient_steps: 1000000
     learning_rate: 0.00005 #0.00005
-    batch_size: 16
+    batch_size: 5
     reduce_lr_patience: 50000
     reduce_lr_factor: 0.25
-    checkpoint_interval: 100000 # after how many gradient steps to save the weights
+    checkpoint_interval: 200000 # after how many gradient steps to save the weights
     device: 'cuda' # can be 'cpu', 'cuda', or 'auto' (use GPU if available)
 
 debug:
