--- a/configs/tasks/task1.yaml
+++ b/configs/tasks/task1.yaml
@@ -2,8 +2,9 @@ data_generation:
     seed: 0
     n_timesteps: 20
     max_objects:  16
-    # 0表示预测最后一个状态，而n_timesteps表示预测第一个状态
-    dt: 0.1
+    dt: 10
     avg_gt_objects:  3.1 #3.1 computed via simulation, 1k samples
-    field_of_view_lb: -50
-    field_of_view_ub: 50
+    n_avg_starting_objects: 4
+    n_avg_false_measurements: 0
+    field_of_view_lb: -100000
+    field_of_view_ub: 100000
