feat(Model)!: Change the decoder input to last output & zero vector
The decoder input query is a combination of last output(a half) & zero vector(a half).
Last output for iterative predict, and zero vector for new birth target.

BREAKING CHANGE: Selection Mechanism is removed.

--- a/configs/models/mt3.pro.yaml
+++ b/configs/models/mt3.pro.yaml
@@ -16,6 +16,7 @@ arch:
     n_prediction_layers: 3
     with_state_refine: True
     two_stage: True
+    exist_threshold: 0.8
 
 loss:
     type: 'detr'
